salesforce_sfdx_QA/main/default/objects/Strategic_Energy_Partnership__c/fields/Agreement_Signed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed_Start_Date__c</fullName>
    <description>Agreement signed start date for the Strategic Energy Partnership.</description>
    <inlineHelpText>This field contains the agreement signed start date for the Strategic Energy Partnership.</inlineHelpText>
    <label>Agreement Signed Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>