salesforce_sfdx_QA/main/default/objects/Strategic_Energy_Partnership__c/fields/Business_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Development Manager for Strategic Energy Partnership.</description>
    <inlineHelpText>This field contains the Business Development Manager for the Strategic Energy Partnership.</inlineHelpText>
    <label>Business Development Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Strategic Energy Partnerships</relationshipLabel>
    <relationshipName>Strategic_Energy_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>