salesforce_sfdx_QA/main/default/objects/Strategic_Energy_Partnership__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead field.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Strategic Energy Partnerships</relationshipLabel>
    <relationshipName>Strategic_Energy_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>