salesforce_sfdx_QA/main/default/objects/Strategic_Energy_Partnership__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Owner for this Strategic Energy Partnership.</description>
    <inlineHelpText>This field contains the Lead Owner for this Strategic Energy Partnership.</inlineHelpText>
    <label>Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Energy_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>