salesforce_sfdx_QA/main/default/objects/Strategic_Energy_Partnership__c/fields/SEP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SEP_End_Date__c</fullName>
    <description>End date for the Strategic Energy Partnership agreement.</description>
    <inlineHelpText>This field contains the end date for the Strategic Energy Partnership agreement.</inlineHelpText>
    <label>SEP End Date</label>
    <type>Date</type>
</CustomField>